--- a/LockView/app/src/main/res/values/strings.xml
+++ b/LockView/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="fragment_title_set_image">Set Image</string>
     <string name="fragment_title_set_topic">Set Topic</string>
 
-    <!-- Intro Text -->
+    <!-- Intro Topic Text -->
     <string name="intro_image_button_text">Let\'s go!</string>
     <string name="intro_image_title">Prefer your own image as your lock screen?or,we will get a perfect one for you from Bing.</string>
     <string name="intro_image_title_1">USE MY OWN IMAGE</string>
@@ -18,7 +18,7 @@
     <string name="intro_image_title_2">BING</string>
     <string name="intro_image_content_2">Refresh your day with a new cover photo from Bing everyday.If you choose this option, you agree that all rights belong to the repectvie owners of the iamge.</string>
 
-    <!-- Intro Text -->
+    <!-- Intro Image Text -->
     <string name="intro_topic_button_text">Let\'s go!</string>
     <string name="intro_topic_title">What would you like to read in your lock screen?Select a category from below.</string>
     <string name="intro_topic_title_1">SPECIFIC TOPIC OF YOUR CHOICE</string>
@@ -27,5 +27,11 @@
     <string name="intro_topic_content_2">Love News,Sports or Finance?We got you covered.Choose this option if you would like to see a broader news topic</string>
     <string name="intro_topic_title_3">LANGUAGE LEARNING</string>
     <string name="intro_topic_content_3">Transform your phone to a best language learning tool.Learn a new word from a language of your choice right from the lock screen!</string>
+
+    <!-- Set Topic Text-->
+    <string name="set_topic_title">Tell us about a specific topic.We\'ll gather all news about it for you.</string>
+    <string name="set_topic_hint">Type in a specific topic. e.g.Apple,UW,Google,President,Seahawk.</string>
+    <string name="set_topic_explanation">LockView is not a news provider.All related news is culled from Internet.</string>
+    <string name="set_topic_button_text">Preview</string>
 
 </resources>
