--- a/LockView/app/src/main/res/values/strings.xml
+++ b/LockView/app/src/main/res/values/strings.xml
@@ -38,4 +38,14 @@
     <string name="preview_button_text">Great!</string>
     <string name="preview_hint">You can customize styles by tapping the preview texts.</string>
 
+    <!-- Settings -->
+    <string name="settings_title">Customize the portion of the text you chose with new color and size.</string>
+    <string name="settings_title_foreground">Title Foreground</string>
+    <string name="settings_content_foreground">Content Foreground</string>
+    <string name="settings_title_background">Title Background</string>
+    <string name="settings_content_background">Content Background</string>
+    <string name="settings_title_fontzise">Title Fontsize</string>
+    <string name="settings_content_fontsize">Content Fontsize</string>
+    <string name="settings_button_text">Done!</string>
+
 </resources>
